syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.jake.bmi";
option java_outer_classname = "BmiServiceImpl";

package grpcheart;

service BMI{
	
	rpc bmiCalculation(BmiRequest) returns (BmiReply);
	rpc bmiAdvice(Empty) returns (BmiAdvice);
	
}

message BmiRequest {
	double height = 1;
	double weight = 2;
	
}

message BmiReply {
	double bmi = 1;
	string bmimessage = 2;	
}

message Empty {

}

message BmiAdvice {
	string link1 = 1;
	string link2 = 2;
}